Fix features alignment text style

--- a/desktop/trp/marketingsite/wp-content/themes/sage-master/assets/styles/pages/_home.scss
+++ b/desktop/trp/marketingsite/wp-content/themes/sage-master/assets/styles/pages/_home.scss
@@ -112,6 +112,7 @@
 		h4 {
 			font-size: 22px;
 			font-family: ProximaNovaBold;
+			text-transform: uppercase;
 		}
 		p {
 			color: #fff;
